# gallery

./: .env  .env.example  .gitignore  AGENTS.md  ALBUM_EXPIRATION_FEATURE.md  CLAUDE.md  DEPLOYMENT.md  DEPLOY_MANUAL.md  QUICKSTART.md  README.md  VERCEL_DEPLOYMENT.md  deploy.bat  deploy.ps1  deploy.sh  docker-compose.yml  gallery_app.tsx  package.json  plan.md  pyproject.toml  requirements.txt  vercel.json
.playwright-mcp/: page-2026-06-08T08-17-09-853Z.yml  page-2026-06-08T08-23-34-086Z.yml  page-2026-06-08T08-24-35-475Z.yml  page-2026-06-08T08-24-50-932Z.yml  page-2026-06-08T08-25-13-179Z.yml  page-2026-06-08T08-31-50-895Z.yml  page-2026-06-08T09-06-15-988Z.yml  page-2026-06-08T09-06-34-961Z.yml
api/: index.py
backend/: .dockerignore  .env.example  .env.prod  .env.prod.example  Dockerfile  alembic.ini  init_db.py  main.py  requirements.txt  setup_venv.ps1
backend/alembic/: env.py
backend/alembic/versions/: 063f91e7e8ef_add_settings_table.py  20260608_add_expiration_fields_to_albums.py  20260608_add_thumbnail_file_id_to_photos.py  41e319a9198e_add_role_to_users.py  6e781f55bb75_add_photo_id_to_share_model_for_photo_.py
backend/app/api/: admin.py  albums.py  auth.py  photos.py  (+1 more)
docs/: 01-architecture.md  02-api-reference.md  03-google-drive-setup.md  04-database.md  04-google-drive-oauth-setup.md  05-deployment.md  06-examples.md  README.md  google-drive-service-account-setup.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
src/: index.py
(+26 files in other folders)
