[project]
name = "gallery"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn==0.34.0",
    "mangum==0.18.0",
    "sqlalchemy==2.0.36",
    "sqlalchemy-libsql==0.2.0",
    "psycopg2-binary==2.9.10",
    "alembic==1.14.0",
    "apscheduler==3.10.4",
    "Pillow==12.2.0",
    "pyjwt==2.10.1",
    "passlib[argon2]==1.7.4",
    "python-multipart==0.0.20",
    "google-auth==2.37.0",
    "google-auth-oauthlib==1.2.1",
    "google-auth-httplib2==0.2.0",
    "google-api-python-client==2.158.0",
    "pydantic==2.11.1",
    "pydantic-settings==2.7.1",
    "email-validator==2.2.0",
    "python-dotenv==1.0.1",
]

[tool.vercel]
entrypoint = "src.index:app"
